--- a/var/www/html/delete_form.html
+++ b/var/www/html/delete_form.html
@@ -27,6 +27,6 @@
     <p>Click the button to delete a file.</p>
 
     <!-- Example delete button (deletes file "somefile.txt") -->
-    <button onclick="deleteFile('Cleaner_42.sh.txt')">Delete File</button>
+    <button onclick="deleteFile('somefile.txt')">Delete File</button>
 </body>
 </html>
