--- a/var/www/html/delete_form.html
+++ b/var/www/html/delete_form.html
@@ -12,9 +12,9 @@
                     'Content-Type': 'application/json'
                 }
             })
-            .then(response => response.json())
+            .then(response => response.text())
             .then(data => {
-                alert(data.error || data.message);
+                alert(data);
             })
             .catch(error => {
                 alert('Error deleting file: ' + error);
