--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -1,1 +1,63 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Our Showcase</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>Welcome to My Showcase</h1>
+   
+  </header>
+
+    <main>
+    <section id="about">
+  <h2>About the Team</h2>
+  <p>Hello! We're a team of developers showcasing our work here. This site is static, simple, and fast.</p>
+  
+  <ul class="team-list">
+    <li>Jan Bakker</li>
+    <li>Jose Leonardo Lopez Antequera</li>
+    <li>Thijs van den Berg</li>
+  </ul>
+</section>
+
+<section id="projects">
+  <h2>Projects</h2>
+  <div class="project">
+    <div>
+      <h3>Webserv</h3>
+      <p>This project is about writing your own HTTP server.
+         You will be able to test it with an actual browser.
+         HTTP is one of the most widely used protocols on the internet.
+         Understanding its intricacies will be useful, even if you won’t be working on a website.</p>
+    </div>
+  </div>
+
+  <div class="project">
+    <h3>CGI Examples</h3>
+    <ul class="cgi-list">
+      <li><a href="/cgi-bin/another.php">Another</a></li>
+      <li><a href="/cgi-bin/cgilib.php">CGIlib php</a></li>
+      <li><a href="/cgi-bin/cgilib.py">CGIlib python</a></li>
+      <li><a href="/cgi-bin/simple.php">simple.php</a></li>
+      <li><a href="/cgi-bin/debug/debug.py">Debug</a></li>
+      <li><a href="/cgi-bin/error/error.py">Error </a></li>
+      <li><a href="/cgi-bin/timeout/timeout">Timeout</a></li>  
+      <li><a href="/cgi-bin/user/fetchUser.py">fetchUser</a></li>
+
+
+    </ul>
+
+  </div>
+</section>
+
+     </main>
+
+  <footer>
+    <p>&copy; 2025 Webserv Unlimited. All rights reserved.</p>
+  </footer>
+</body>
+</html>
