--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -25,33 +25,33 @@
 </section>
 
 <section id="projects">
-  <h2>Projects</h2>
+  <h1>Projects</h1>
   <div class="project">
     <div>
-      <h3>Webserv</h3>
+      <h2>Webserv</h2>
       <p>This project is about writing your own HTTP server.
          You will be able to test it with an actual browser.
          HTTP is one of the most widely used protocols on the internet.
          Understanding its intricacies will be useful, even if you won’t be working on a website.</p>
     </div>
   </div>
-
-  <div class="project">
-    <h3>CGI Examples</h3>
+<div class="project">
+  <div>
+    <h4>CGI Examples</h4>
+    <p>Here are some interactive CGI endpoints to demonstrate server-side scripting:</p>
     <ul class="cgi-list">
       <li><a href="/cgi-bin/another.php">Another</a></li>
-      <li><a href="/cgi-bin/cgilib.php">CGIlib php</a></li>
-      <li><a href="/cgi-bin/cgilib.py">CGIlib python</a></li>
-      <li><a href="/cgi-bin/simple.php">simple.php</a></li>
-      <li><a href="/cgi-bin/debug/debug.py">Debug</a></li>
-      <li><a href="/cgi-bin/error/error.py">Error </a></li>
-      <li><a href="/cgi-bin/timeout/timeout">Timeout</a></li>  
-      <li><a href="/cgi-bin/user/fetchUser.py">fetchUser</a></li>
-
-
+      <li><a href="/cgi-bin/cgilib.php">CGIlib (PHP)</a></li>
+      <li><a href="/cgi-bin/cgilib.py">CGIlib (Python)</a></li>
+      <li><a href="/cgi-bin/simple.php">Simple PHP</a></li>
+      <li><a href="/cgi-bin/debug/debug.py">Debug Script</a></li>
+      <li><a href="/cgi-bin/error/error.py">Error Test</a></li>
+      <li><a href="/cgi-bin/timeout/timeout">Timeout Simulation</a></li>
+      <li><a href="/cgi-bin/user/fetchUser.py">Fetch User Info</a></li>
     </ul>
-
   </div>
+</div>
+
 </section>
 
      </main>
