--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -50,6 +50,14 @@
       <li><a href="/cgi-bin/user/fetchUser.py">Fetch User Info</a></li>
     </ul>
   </div>
+    <div>
+    <h4>Files</h4>
+    <p>upload/delete</p>
+    <ul class="cgi-list">
+      <li><a href="/html/upload_form.html">Upload</a></li>
+      <li><a href="/html/delete_form.html">Delete</a></li>
+    </ul>
+  </div>
 </div>
 
 </section>
