--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -40,14 +40,13 @@
     <h4>CGI Examples</h4>
     <p>Here are some interactive CGI endpoints to demonstrate server-side scripting:</p>
     <ul class="cgi-list">
-      <li><a href="/cgi-bin/another.php">Another</a></li>
-      <li><a href="/cgi-bin/cgilib.php">CGIlib (PHP)</a></li>
-      <li><a href="/cgi-bin/cgilib.py">CGIlib (Python)</a></li>
-      <li><a href="/cgi-bin/simple.php">Simple PHP</a></li>
-      <li><a href="/cgi-bin/debug/debug.py">Debug Script</a></li>
-      <li><a href="/cgi-bin/error/error.py">Error Test</a></li>
-      <li><a href="/cgi-bin/timeout/timeout">Timeout Simulation</a></li>
-      <li><a href="/cgi-bin/user/fetchUser.py">Fetch User Info</a></li>
+      <li><a href="/cgi/another.php">Another</a></li>
+      <li><a href="/cgi/simple.php">Simple PHP</a></li>
+      <li><a href="/cgi/debug">Debug Script</a></li>
+      <li><a href="/cgi/debug/zen">The zen of Python</a></li>
+      <li><a href="/cgi/error">Error Test</a></li>
+      <li><a href="/cgi/timeout/timeout">Timeout Simulation</a></li>
+      <li><a href="/cgi/user/Jhon">Fetch User Info</a></li>
     </ul>
   </div>
     <div>
