--- a/var/www/html/upload_form.html
+++ b/var/www/html/upload_form.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload File</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Upload File</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Upload Your File</h1>
-    <form action="/upload" method="POST" enctype="multipart/form-data">
-        <!-- Input for choosing the file -->
-        <label for="file">Choose a file:</label>
-        <input type="file" id="file" name="file"><br><br>
+  <h1>Upload Your File</h1>
+  <form action="/upload" method="POST" enctype="multipart/form-data">
+    <label for="file">Choose a file:</label>
+    <input type="file" id="file" name="file" required>
 
-        <!-- Optional text field -->
-        <label for="description">File Description:</label>
-        <input type="text" id="description" name="description"><br><br>
+    <label for="description">File Description:</label>
+    <input type="text" id="description" name="description" placeholder="Optional">
 
-        <!-- Submit button -->
-        <input type="submit" value="Upload">
-    </form>
+    <input type="submit" value="Upload">
+  </form>
 </body>
 </html>
