--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -42,11 +42,11 @@
     <ul class="cgi-list">
       <li><a href="/cgi/another.php">Another</a></li>
       <li><a href="/cgi/simple.php">Simple PHP</a></li>
-      <li><a href="/cgi/debug/debug.py">Debug Script</a></li>
-      <li><a href="/cgi/debug/zen.py">The zen of Python</a></li>
-      <li><a href="/cgi/error/error.py">Error Test</a></li>
-      <li><a href="/cgi/timeout/timeout.py">Timeout Simulation</a></li>
-      <li><a href="/cgi/user/fetchUser.py">Fetch User Info</a></li>
+      <li><a href="/cgi/debug">Debug Script</a></li>
+      <li><a href="/cgi/debug/zen">The zen of Python</a></li>
+      <li><a href="/cgi/error/error">Error Test</a></li>
+      <li><a href="/cgi/timeout/timeout">Timeout Simulation</a></li>
+      <li><a href="/cgi/user/fetchUser">Fetch User Info</a></li>
     </ul>
   </div>
     <div>
