--- a/var/www/html/delete_form.html
+++ b/var/www/html/delete_form.html
@@ -91,12 +91,17 @@
     }
 
     function deleteFile(file) {
-      fetch('delete_file.php', {
+      fetch('/cgi/delete_file.php', {
         method: 'DELETE',
         headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
         body: `action=delete&file=${encodeURIComponent(file)}`
       })
-      .then(response => response.text())
+      .then(response => {
+        if (!response.ok) {
+          alert('Failed to delete file. Server responded with status: ' + response.status);
+        }
+        return response.text();
+      })
       .then(data => {
         fetchFiles();
       })
