--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -38,7 +38,7 @@
 <div class="project">
   <div>
     <h4>CGI Examples</h4>
-    <p>Here are some interactive CGI endpoints to demonstrate server-side scripting:</p>
+    <p>Interactive CGI endpoints to demonstrate server-side scripting:</p>
     <ul class="cgi-list">
       <li><a href="/cgi/another.php">Another</a></li>
       <li><a href="/cgi/simple.php">Simple PHP</a></li>
