--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -53,6 +53,8 @@
             <li><a href="/cgi/error/error">Error Test</a></li>
             <li><a href="/cgi/timeout/timeout">Timeout Simulation</a></li>
             <li><a href="/cgi/user/fetchUser">Fetch User Info</a></li>
+            <li><a href="/cgi/fucker.py/2">Stream 2GB File (fast)</a></li>
+            <li><a href="/cgi/fucker.py/2?slow=1">Stream 2GB File (slow)</a></li>
           </ul>
         </div>
         <div>
