--- a/var/www/filestuff/upload_form.html
+++ b/var/www/filestuff/upload_form.html
@@ -122,7 +122,7 @@
     <h1>Upload Your File</h1>
   </header>
 
-  <form action="/upload" method="POST" enctype="multipart/form-data">
+  <form action="upload_file.php" method="POST" enctype="multipart/form-data">
     <label for="file">Choose a file:</label>
     <label class="custom-file-label" id="file-label" for="file">Browse...</label>
     <input type="file" id="file" name="file" required>
