--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -61,8 +61,8 @@
           <h4>Files</h4>
           <p>upload/delete</p>
           <ul class="cgi-list">
-            <li><a href="/upload_form.html">Upload</a></li>
-            <li><a href="/delete_form.html">Delete</a></li>
+            <li><a href="/files/upload_form.html">Upload</a></li>
+            <li><a href="/files/delete_form.html">Delete</a></li>
           </ul>
         </div>
       </div>
