--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -46,15 +46,13 @@
           <h4>CGI Examples</h4>
           <p>Interactive CGI endpoints to demonstrate server-side scripting:</p>
           <ul class="cgi-list">
-            <li><a href="/cgi/another.php">Another</a></li>
             <li><a href="/cgi/simple.php">Simple PHP</a></li>
+            <li><a href="/cgi/another.php">Another PHP</a></li>
             <li><a href="/cgi/debug">Debug Script</a></li>
             <li><a href="/cgi/debug/zen">The zen of Python</a></li>
-            <li><a href="/cgi/error/error">Error Test</a></li>
-            <li><a href="/cgi/timeout/timeout">Timeout Simulation</a></li>
-            <li><a href="/cgi/user/fetchUser">Fetch User Info</a></li>
-            <li><a href="/cgi/fucker.py/2">Stream 2GB File (fast)</a></li>
-            <li><a href="/cgi/fucker.py/2?slow=1">Stream 2GB File (slow)</a></li>
+            <li><a href="/cgi/error">Error Test</a></li>
+            <li><a href="/cgi/timeout">Timeout Simulation</a></li>
+            <li><a href="/cgi/bigaf/1">Stream 1GB CGI File</a></li>
           </ul>
         </div>
         <div>
@@ -63,6 +61,11 @@
           <ul class="cgi-list">
             <li><a href="/files/upload_form.html">Upload</a></li>
             <li><a href="/files/delete_form.html">Delete</a></li>
+          </ul>
+          <br/>
+          <p>Big stuff</p>
+          <ul class="cgi-list">
+            <li><a href="/static/bigaf">Stream 1GB Static File</a></li>
           </ul>
         </div>
       </div>
