--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Our Showcase</title>
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -28,6 +28,7 @@
         <li>Thijs van den Berg</li>
       </ul>
     </section>
+    <button onclick="document.body.classList.toggle('party-mode')">🎉 Toggle Party Mode</button>
 
     <section id="projects">
       <h1>Projects</h1>
@@ -37,7 +38,7 @@
           <p>This project is about writing your own HTTP server.
             You will be able to test it with an actual browser.
             HTTP is one of the most widely used protocols on the internet.
-            Understanding its intricacies will be useful, even if you won’t be working on a website.</p>
+            Understanding its intricacies will be useful, even if you won't be working on a website.</p>
         </div>
       </div>
 
@@ -77,6 +78,6 @@
   </footer>
 
   <!-- Fireworks script goes here -->
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
